Development history / change log, please read from bottom up

Version 2.97 - xx yyy 2012
reduce scan depth while searching files and directories
UniLog2 - fix error restart live gathering not possible if stopped while dialog is closed
HottAdapter2 - fix GPS data detection to enable Google Earth visualization
HottAdapter(2) - fix Receiver detection and add data error correction 


Version 2.96 - 24 Feb 2012
VC8x0 - add warning message while error limit is reached. 
VC8x0 - refine timeout error handling
HottAdapter - General-Air-Sensor 115200 protocol, fix several error value display
HottAdapter - correct sign of dBm gauge values
HottAdapter - refine sensor detection while slave modus
HottAdapter - refine binary log version detection
HoTTAdapter2 - have all possible sensor values on identical time line
UniLog2 - make live data gathering more robust
update Linux cp210x kernel module for kernel 3.0.0.16 
Documentation update

Version 2.95 - 28 Jan 2012
HoTTAdapter - filter misplaced measurements while loading or gathering data from multiple sensors
HoTTAdapter - change record set naming and numbering, all of one import starts identical
HoTTAdapter - adapt to latest firmware version
HoTTAdapter - make query sensor sequence more efficiency
HoTTAdapter - enable detection of missed query sensor writes
HoTTAdapter - 19200 Baud slave-modus, refine error handling while switch sensor/receiver 
fix error removing absolute time stamp while cutting curve from begin
HoTTAdapter - enable IGC export format while GPS data available
NMEAAdapter - enable IGC export format
SM GPS-Logger - enable IGC export format
WStech DataVario/LinkVario - enable IGC export format while GPS data available
VC8x0 - fix error displaying integer values 
VC8x0 - enable changeable time steps value for long term measurements
Documentation update

Version 2.95 - 20 Dec 2011
DevicePropertyEditor - fix out of handles problem