@@ -2,9 +2,11 @@ Development history / change log, please read from bottom up
 
 Version 2.97 - xx yyy 2012
 reduce scan depth while searching files and directories
+update CSV data parser
 UniLog2 - fix error restart live gathering not possible if stopped while dialog is closed
 HottAdapter2 - fix GPS data detection to enable Google Earth visualization
 HottAdapter(2) - fix Receiver detection and add data error correction 
+add Multiplex FlightRecorder support
 
 
 Version 2.96 - 24 Feb 2012
